tests/bind/good/fun-basic.py
def x():
    return 1

x()
