tests/bind/bad/undeclared-fun.py
def bar():
    return 0

foo = 1

bar()
foo()
